[workspace]
members = [ "contracts/*" ]
resolver = "2"

[workspace.package]
authors = ["D"]
edition = "2021"
license = "TBD"
version = "0.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", branch = "main" }
prost = "0.12.4"
prost-types = "0.12.4"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "feat/respect-gogoproto-nullable" }
cosmwasm-std = { version = "2.1.0", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
] }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false }
cosmwasm-schema = { version = "2.0.4", default-features = false }
serde-json-wasm = "1.0.0"
base64 = "0.21.4"
thiserror = "1"
test-case = "3.3.1"


