[package]
name = "cron-runner"
version = "0.1.0"
authors = ["The Drop Protocol Developers"]
edition = "2021"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
serde_json = "1.0"
prost = { workspace = true }

[dev-dependencies]
cw-multi-test = "2.0.0"
