[package]
name = "dasset-updator"
version = "0.1.0"
description = "updates config params of dasset vault"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
serde_json = "1.0"
schemars = {  workspace = true }
serde = { version = "1.0.180", default-features = false, features = ["derive"] }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = {  workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
test-case = { workspace = true }
neutron-std = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }


[dev-dependencies]
