[package]
name = "mmvault"
version = "0.1.6"
description = "market making vault"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
serde_json = "1.0"
schemars = {  workspace = true }
serde = { version = "1.0.180", default-features = false, features = ["derive"] }
cosmwasm-std = { workspace = true }
cw2 = {  workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
test-case = { workspace = true }
neutron-std = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = "2.0.0"
